--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "xdeal_api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Yahya Nashar",
   "license": "ISC",
-  "description": "",
+  "description": "api endpoints for xdeal mobile app",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
